<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.NewPaleteActivity"
    android:background="#3F51B5">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:background="@mipmap/ic_nova_palete_foreground"

        android:contentDescription="@string/img_new_palete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/appTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/adicionar_palete"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_palete_nb"
        android:layout_width="331dp"
        android:layout_height="54dp"
        android:layout_marginTop="32dp"
        android:autofillHints="@string/n_mero_palete"
        android:background="@drawable/txt_field_white"
        android:hint="@string/n_mero_palete"
        android:inputType="text"
        android:textAlignment="center"
        android:textColorHint="#555353"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appTittle" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinner_warehouse"
        android:layout_width="331dp"
        android:layout_height="54dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_spinner_warehouse"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_palete_nb"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btn_confirm_new_palete"
        android:layout_width="331dp"
        android:layout_height="60dp"
        android:background="@drawable/bg_gradient_button_confirm"
        android:text="@string/confirmar"
        android:textAlignment="center"
        android:textColor="#293CA6"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_warehouse" />

</androidx.constraintlayout.widget.ConstraintLayout>